trained LLM as seq_cls. Solid metrics

--- a/notebooks/model_finetune_seq_cls.ipynb
+++ b/notebooks/model_finetune_seq_cls.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:03.592071Z",
-     "start_time": "2025-01-29T11:56:02.607575Z"
+     "end_time": "2025-01-29T12:52:31.788797Z",
+     "start_time": "2025-01-29T12:52:30.805485Z"
     }
    },
    "cell_type": "code",
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:03.599528Z",
-     "start_time": "2025-01-29T11:56:03.594080Z"
+     "end_time": "2025-01-29T12:52:31.796331Z",
+     "start_time": "2025-01-29T12:52:31.791318Z"
     }
    },
    "cell_type": "code",
@@ -60,8 +60,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:05.618227Z",
-     "start_time": "2025-01-29T11:56:03.665348Z"
+     "end_time": "2025-01-29T12:52:33.737612Z",
+     "start_time": "2025-01-29T12:52:31.862778Z"
     }
    },
    "cell_type": "code",
@@ -71,7 +71,8 @@
     "    TrainingArguments,\n",
     "    AutoModelForSequenceClassification,\n",
     "    Trainer,\n",
-    "    DataCollatorWithPadding\n",
+    "    DataCollatorWithPadding,\n",
+    "    EarlyStoppingCallback\n",
     ")\n",
     "\n",
     "from peft import (\n",
@@ -81,8 +82,7 @@
     "\n",
     "import wandb\n",
     "import pandas as pd\n",
-    "from datasets import Dataset\n",
-    "from trl import SFTTrainer"
+    "from datasets import Dataset"
    ],
    "id": "9e21f997b648e218",
    "outputs": [],
@@ -91,8 +91,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:05.906260Z",
-     "start_time": "2025-01-29T11:56:05.621062Z"
+     "end_time": "2025-01-29T12:52:34.041259Z",
+     "start_time": "2025-01-29T12:52:33.740829Z"
     }
    },
    "cell_type": "code",
@@ -108,8 +108,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:07.757737Z",
-     "start_time": "2025-01-29T11:56:05.909117Z"
+     "end_time": "2025-01-29T12:52:35.863568Z",
+     "start_time": "2025-01-29T12:52:34.043945Z"
     }
    },
    "cell_type": "code",
@@ -153,7 +153,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250129_195606-1a30pjcm</code>"
+       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250129_205235-gcmzle2e</code>"
       ]
      },
      "metadata": {},
@@ -165,7 +165,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/1a30pjcm?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">generous-wave-29</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/gcmzle2e?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">stellar-dew-32</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ]
      },
      "metadata": {},
@@ -189,7 +189,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/1a30pjcm?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/1a30pjcm?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
+       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/gcmzle2e?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/gcmzle2e?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
       ]
      },
      "metadata": {},
@@ -213,14 +213,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:07.764562Z",
-     "start_time": "2025-01-29T11:56:07.761462Z"
+     "end_time": "2025-01-29T12:52:35.870717Z",
+     "start_time": "2025-01-29T12:52:35.867850Z"
     }
    },
    "cell_type": "code",
    "source": [
     "base_model_path = \"../models/llama_models/llama-3.2-3B\"\n",
-    "new_model_path = \"../models/tuned_models/llama-3.2-3B-phishing-classifier\"\n",
+    "new_model_path = \"../models/tuned_models/llama-3.2-3B-phishing-classifier-seq-cls\"\n",
     "train_dataset_path = \"../processed_data/train.csv\"\n",
     "test_dataset_path = \"../processed_data/test.csv\""
    ],
@@ -231,8 +231,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:08.043783Z",
-     "start_time": "2025-01-29T11:56:07.768029Z"
+     "end_time": "2025-01-29T12:52:36.147410Z",
+     "start_time": "2025-01-29T12:52:35.875161Z"
     }
    },
    "cell_type": "code",
@@ -330,8 +330,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:08.067193Z",
-     "start_time": "2025-01-29T11:56:08.064562Z"
+     "end_time": "2025-01-29T12:52:36.171331Z",
+     "start_time": "2025-01-29T12:52:36.167964Z"
     }
    },
    "cell_type": "code",
@@ -349,8 +349,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:10.828200Z",
-     "start_time": "2025-01-29T11:56:08.085484Z"
+     "end_time": "2025-01-29T12:52:38.930419Z",
+     "start_time": "2025-01-29T12:52:36.192408Z"
     }
    },
    "cell_type": "code",
@@ -376,7 +376,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6e7ce47d5fcc4b27add8ed814f0664d8"
+       "model_id": "f2bc311c7d4d4b6ca5824872bd52393e"
       }
      },
      "metadata": {},
@@ -396,8 +396,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:11.035700Z",
-     "start_time": "2025-01-29T11:56:10.830203Z"
+     "end_time": "2025-01-29T12:52:39.135250Z",
+     "start_time": "2025-01-29T12:52:38.932455Z"
     }
    },
    "cell_type": "code",
@@ -409,8 +409,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:11.052562Z",
-     "start_time": "2025-01-29T11:56:11.049847Z"
+     "end_time": "2025-01-29T12:52:39.152621Z",
+     "start_time": "2025-01-29T12:52:39.149453Z"
     }
    },
    "cell_type": "code",
@@ -426,8 +426,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:11.073634Z",
-     "start_time": "2025-01-29T11:56:11.066392Z"
+     "end_time": "2025-01-29T12:52:39.172923Z",
+     "start_time": "2025-01-29T12:52:39.166014Z"
     }
    },
    "cell_type": "code",
@@ -458,8 +458,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:11.090588Z",
-     "start_time": "2025-01-29T11:56:11.087532Z"
+     "end_time": "2025-01-29T12:52:39.243899Z",
+     "start_time": "2025-01-29T12:52:39.241310Z"
     }
    },
    "cell_type": "code",
@@ -474,8 +474,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:22.305544Z",
-     "start_time": "2025-01-29T11:56:11.105759Z"
+     "end_time": "2025-01-29T12:52:50.735807Z",
+     "start_time": "2025-01-29T12:52:39.274003Z"
     }
    },
    "cell_type": "code",
@@ -496,7 +496,7 @@
     "        row_json = [\n",
     "            {\"role\": \"system\", \"content\": system},\n",
     "            {\"role\": \"user\", \"content\": user},\n",
-    "            {\"role\": \"assistant\", \"content\": str(assistant)}\n",
+    "            {\"role\": \"assistant\", \"content\": \"\"}\n",
     "        ]\n",
     "        formatted_texts.append(tokenizer.apply_chat_template(row_json, tokenize=False))\n",
     "        labels.append(1 if str(assistant).lower() == \"true\" else 0)\n",
@@ -532,7 +532,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "00cd91601e8340fabdff4cdc1dbe880d"
+       "model_id": "a4c9442e2b75469cb4c91156a2d7c63b"
       }
      },
      "metadata": {},
@@ -544,8 +544,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:23.310268Z",
-     "start_time": "2025-01-29T11:56:22.320965Z"
+     "end_time": "2025-01-29T12:52:51.740159Z",
+     "start_time": "2025-01-29T12:52:50.738894Z"
     }
    },
    "cell_type": "code",
@@ -568,7 +568,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7eb03bc083d849b5a5abc7f80b20f2fd"
+       "model_id": "ffcd24db882b46e6b902d6dd7bec913b"
       }
      },
      "metadata": {},
@@ -580,8 +580,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:23.551153Z",
-     "start_time": "2025-01-29T11:56:23.325818Z"
+     "end_time": "2025-01-29T12:52:51.986773Z",
+     "start_time": "2025-01-29T12:52:51.756198Z"
     }
    },
    "cell_type": "code",
@@ -607,8 +607,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:23.609451Z",
-     "start_time": "2025-01-29T11:56:23.570616Z"
+     "end_time": "2025-01-29T12:52:52.042360Z",
+     "start_time": "2025-01-29T12:52:52.006456Z"
     }
    },
    "cell_type": "code",
@@ -638,7 +638,7 @@
     "    load_best_model_at_end=True,\n",
     "    metric_for_best_model=\"eval_loss\",\n",
     "    greater_is_better=False,\n",
-    "    save_total_limit=3\n",
+    "    save_total_limit=2,\n",
     ")"
    ],
    "id": "f0aee664e91757ee",
@@ -648,21 +648,39 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:23.632334Z",
-     "start_time": "2025-01-29T11:56:23.629530Z"
+     "end_time": "2025-01-29T12:52:52.062883Z",
+     "start_time": "2025-01-29T12:52:52.059778Z"
     }
    },
    "cell_type": "code",
-   "source": "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)",
-   "id": "4d10c9f217e3f02f",
+   "source": [
+    "early_stopping_callback = EarlyStoppingCallback(\n",
+    "    early_stopping_patience=2,\n",
+    "    early_stopping_threshold=0.003\n",
+    ")"
+   ],
+   "id": "a6ee59ec13ef25b6",
    "outputs": [],
    "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-29T11:56:23.661442Z",
-     "start_time": "2025-01-29T11:56:23.651030Z"
+     "end_time": "2025-01-29T12:52:52.082035Z",
+     "start_time": "2025-01-29T12:52:52.079499Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)",
+   "id": "4d10c9f217e3f02f",
+   "outputs": [],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T12:52:52.110589Z",
+     "start_time": "2025-01-29T12:52:52.099050Z"
     }
    },
    "cell_type": "code",
@@ -672,20 +690,19 @@
     "    args=training_arguments,\n",
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=test_dataset,\n",
-    "    data_collator=data_collator\n",
+    "    data_collator=data_collator,\n",
+    "    callbacks=[early_stopping_callback]\n",
     ")"
    ],
    "id": "3503b45bfcc974f",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 20
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2025-01-29T11:56:23.678043Z"
+     "end_time": "2025-01-29T13:58:52.133621Z",
+     "start_time": "2025-01-29T12:52:52.130885Z"
     }
    },
    "cell_type": "code",
@@ -701,8 +718,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='8' max='4660' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [   8/4660 00:15 < 3:15:20, 0.40 it/s, Epoch 0.02/10]\n",
+       "      <progress value='1401' max='4660' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1401/4660 1:05:53 < 2:33:30, 0.35 it/s, Epoch 3/10]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -713,31 +730,122 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.009100</td>\n",
+       "      <td>0.054648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.056900</td>\n",
+       "      <td>0.057878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.076753</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n",
+      "Trainer.tokenizer is now deprecated. You should use Trainer.processing_class instead.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=1401, training_loss=0.07599274610447765, metrics={'train_runtime': 3956.9468, 'train_samples_per_second': 37.706, 'train_steps_per_second': 1.178, 'total_flos': 3.902364682341581e+17, 'train_loss': 0.07599274610447765, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": null
+   "execution_count": 21
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T13:58:55.529784Z",
+     "start_time": "2025-01-29T13:58:52.186763Z"
+    }
+   },
    "cell_type": "code",
    "source": "wandb.finish()",
    "id": "a968ba6c0d29438e",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<br>    <style><br>        .wandb-row {<br>            display: flex;<br>            flex-direction: row;<br>            flex-wrap: wrap;<br>            justify-content: flex-start;<br>            width: 100%;<br>        }<br>        .wandb-col {<br>            display: flex;<br>            flex-direction: column;<br>            flex-basis: 100%;<br>            flex: 1;<br>            padding: 10px;<br>        }<br>    </style><br><div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>eval/loss</td><td>▁▂█</td></tr><tr><td>eval/runtime</td><td>▂▁█</td></tr><tr><td>eval/samples_per_second</td><td>▇█▁</td></tr><tr><td>eval/steps_per_second</td><td>▇█▁</td></tr><tr><td>train/epoch</td><td>▁▁▁▁▁▂▂▂▂▂▃▃▃▃▃▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▆▆▇▇▇▇████</td></tr><tr><td>train/global_step</td><td>▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▄▄▅▅▅▅▆▆▆▆▆▆▇▇▇▇▇█</td></tr><tr><td>train/grad_norm</td><td>▃█▄▂▅▁▁▂▂▂▁▁▁▂▂▂▂▂▂▁▁▂▃▂▁▂▁▁▁▁▂▁▁▁▂▁▁▁▁▁</td></tr><tr><td>train/learning_rate</td><td>▁▃█████████████▇▇▇▇▇▇▇▇▇▇▇▇▆▆▆▆▆▆▆▆▆▆▆▆▆</td></tr><tr><td>train/loss</td><td>█▁▁▁▃▁▃▁▂▁▁▁▁▁▁▁▁▂▁▁▁▁▂▂▁▁▁▁▁▁▁▁▁▁▁▁▁▂▁▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>eval/loss</td><td>0.07675</td></tr><tr><td>eval/runtime</td><td>134.1741</td></tr><tr><td>eval/samples_per_second</td><td>27.8</td></tr><tr><td>eval/steps_per_second</td><td>13.9</td></tr><tr><td>total_flos</td><td>3.902364682341581e+17</td></tr><tr><td>train/epoch</td><td>3</td></tr><tr><td>train/global_step</td><td>1401</td></tr><tr><td>train/grad_norm</td><td>0.0</td></tr><tr><td>train/learning_rate</td><td>7e-05</td></tr><tr><td>train/loss</td><td>0</td></tr><tr><td>train_loss</td><td>0.07599</td></tr><tr><td>train_runtime</td><td>3956.9468</td></tr><tr><td>train_samples_per_second</td><td>37.706</td></tr><tr><td>train_steps_per_second</td><td>1.178</td></tr></table><br/></div></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">stellar-dew-32</strong> at: <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/gcmzle2e?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/gcmzle2e?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a><br> View project at: <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a><br>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20250129_205235-gcmzle2e\\logs</code>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 22
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-29T13:58:55.608199Z",
+     "start_time": "2025-01-29T13:58:55.532331Z"
+    }
+   },
    "cell_type": "code",
    "source": "trainer.model.save_pretrained(new_model_path)",
    "id": "a7ff890c53b5ce44",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 23
   }
  ],
  "metadata": {
