tweaked seq_cls for retraining due to bos and eos actually being default in tokeniser.

--- a/notebooks/model_evaluation_seq_cls.ipynb
+++ b/notebooks/model_evaluation_seq_cls.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "    tokenizer.chat_template = None\n",
     "\n",
-    "    tokenizer.chat_template = \"\"\"<|begin_of_text|>{% for message in messages %}<|start_header_id|>{{ message['role'] }}<|end_header_id|>{{ message['content'] }}<|eot_id|>{% endfor %}\"\"\"\n",
+    "    tokenizer.chat_template = \"\"\"{% for message in messages %}<|start_header_id|>{{ message['role'] }}<|end_header_id|>{{ message['content'] }}<|eot_id|>{% endfor %}\"\"\"\n",
     "\n",
     "    true_labels = []\n",
     "    predicted_labels = []\n",
