Switched to instruct model - docs are extremely unclear about the prompt format, especially special tokens.

--- a/notebooks/model_finetune.ipynb
+++ b/notebooks/model_finetune.ipynb
@@ -115,7 +115,7 @@
     "wandb.login(key=wandb_api_key)\n",
     "\n",
     "run = wandb.init(\n",
-    "    project=\"repurposed-llm-phishing-classifier-causal-v2\",\n",
+    "    project=\"repurposed-llm-phishing-classifier-causal-3b-instruct\",\n",
     "    job_type=\"train\",\n",
     "    anonymous=\"allow\"\n",
     ")"
@@ -217,8 +217,8 @@
    },
    "cell_type": "code",
    "source": [
-    "base_model_path = \"../models/llama_models/llama-3.2-3B\"\n",
-    "new_model_path = \"../models/tuned_models/llama-3.2-3B-phishing-classifier-causal-v2\"\n",
+    "base_model_path = \"../models/llama_models/llama-3.2-3B-Instruct\"\n",
+    "new_model_path = \"../models/tuned_models/llama-3.2-3B-phishing-classifier-causal-3b-instruct\"\n",
     "train_dataset_path = \"../processed_data/train.csv\"\n",
     "test_dataset_path = \"../processed_data/test.csv\""
    ],
