--- a/notebooks/model_finetune_seq_cls.ipynb
+++ b/notebooks/model_finetune_seq_cls.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:48:59.084681Z",
-     "start_time": "2025-01-30T16:48:58.085602Z"
+     "end_time": "2025-01-30T16:57:04.671037Z",
+     "start_time": "2025-01-30T16:57:03.661555Z"
     }
    },
    "cell_type": "code",
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:00.153362Z",
-     "start_time": "2025-01-30T16:49:00.147362Z"
+     "end_time": "2025-01-30T16:57:04.679041Z",
+     "start_time": "2025-01-30T16:57:04.673042Z"
     }
    },
    "cell_type": "code",
@@ -60,8 +60,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:03.707366Z",
-     "start_time": "2025-01-30T16:49:01.821182Z"
+     "end_time": "2025-01-30T16:57:06.687047Z",
+     "start_time": "2025-01-30T16:57:04.752312Z"
     }
    },
    "cell_type": "code",
@@ -90,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:04.670278Z",
-     "start_time": "2025-01-30T16:49:04.398447Z"
+     "end_time": "2025-01-30T16:57:06.969600Z",
+     "start_time": "2025-01-30T16:57:06.690317Z"
     }
    },
    "cell_type": "code",
@@ -107,8 +107,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:07.412689Z",
-     "start_time": "2025-01-30T16:49:05.576373Z"
+     "end_time": "2025-01-30T16:57:08.956633Z",
+     "start_time": "2025-01-30T16:57:06.973507Z"
     }
    },
    "cell_type": "code",
@@ -152,7 +152,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250131_004906-1r1i52uq</code>"
+       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250131_005708-luhuyt7z</code>"
       ]
      },
      "metadata": {},
@@ -164,7 +164,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier-3b-instruct/runs/1r1i52uq?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">vital-wood-2</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier-3b-instruct?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier-3b-instruct/runs/luhuyt7z?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">charmed-yogurt-3</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier-3b-instruct?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ]
      },
      "metadata": {},
@@ -188,7 +188,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier-3b-instruct/runs/1r1i52uq?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier-3b-instruct/runs/1r1i52uq?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
+       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier-3b-instruct/runs/luhuyt7z?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier-3b-instruct/runs/luhuyt7z?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
       ]
      },
      "metadata": {},
@@ -212,8 +212,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:36.742395Z",
-     "start_time": "2025-01-30T16:49:36.739616Z"
+     "end_time": "2025-01-30T16:57:08.962520Z",
+     "start_time": "2025-01-30T16:57:08.959926Z"
     }
    },
    "cell_type": "code",
@@ -225,13 +225,13 @@
    ],
    "id": "510dfcf5597f3943",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:38.231824Z",
-     "start_time": "2025-01-30T16:49:37.951406Z"
+     "end_time": "2025-01-30T16:57:09.236675Z",
+     "start_time": "2025-01-30T16:57:08.966208Z"
     }
    },
    "cell_type": "code",
@@ -319,18 +319,18 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:39.365193Z",
-     "start_time": "2025-01-30T16:49:39.362637Z"
+     "end_time": "2025-01-30T16:57:09.262057Z",
+     "start_time": "2025-01-30T16:57:09.259164Z"
     }
    },
    "cell_type": "code",
@@ -343,13 +343,13 @@
    ],
    "id": "51d47220f5319bbf",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:43.471471Z",
-     "start_time": "2025-01-30T16:49:40.621727Z"
+     "end_time": "2025-01-30T16:57:12.080210Z",
+     "start_time": "2025-01-30T16:57:09.280448Z"
     }
    },
    "cell_type": "code",
@@ -375,7 +375,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5095746eecee40a887aec0f7c76030c9"
+       "model_id": "d9ec6bbe67ac43f6938441d9e7a6be20"
       }
      },
      "metadata": {},
@@ -390,26 +390,26 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:45.528366Z",
-     "start_time": "2025-01-30T16:49:45.302768Z"
+     "end_time": "2025-01-30T16:57:12.284519Z",
+     "start_time": "2025-01-30T16:57:12.082212Z"
     }
    },
    "cell_type": "code",
    "source": "tokenizer = AutoTokenizer.from_pretrained(base_model_path, trust_remote_code=True)",
    "id": "8020da79ce3618a2",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:50.670587Z",
-     "start_time": "2025-01-30T16:49:50.663730Z"
+     "end_time": "2025-01-30T16:57:12.306815Z",
+     "start_time": "2025-01-30T16:57:12.300645Z"
     }
    },
    "cell_type": "code",
@@ -436,13 +436,13 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:49:52.137276Z",
-     "start_time": "2025-01-30T16:49:52.132812Z"
+     "end_time": "2025-01-30T16:57:12.326529Z",
+     "start_time": "2025-01-30T16:57:12.321729Z"
     }
    },
    "cell_type": "code",
@@ -554,10 +554,15 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 12
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-30T16:57:12.344392Z",
+     "start_time": "2025-01-30T16:57:12.341543Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# COMMENTED OUT BECAUSE INSTRUCT HAS A CHAT TEMPLATE BUT BASE MODEL DOES NOT\n",
@@ -568,13 +573,13 @@
    ],
    "id": "956fdf1a8d3428b5",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:51:20.343250Z",
-     "start_time": "2025-01-30T16:51:20.328257Z"
+     "end_time": "2025-01-30T16:57:12.371921Z",
+     "start_time": "2025-01-30T16:57:12.358839Z"
     }
    },
    "cell_type": "code",
@@ -609,13 +614,13 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:54:16.700133Z",
-     "start_time": "2025-01-30T16:54:16.683511Z"
+     "end_time": "2025-01-30T16:57:12.400048Z",
+     "start_time": "2025-01-30T16:57:12.387458Z"
     }
    },
    "cell_type": "code",
@@ -638,18 +643,18 @@
        "Embedding(128256, 3072)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:54:27.073498Z",
-     "start_time": "2025-01-30T16:54:27.070906Z"
+     "end_time": "2025-01-30T16:57:12.418324Z",
+     "start_time": "2025-01-30T16:57:12.415293Z"
     }
    },
    "cell_type": "code",
@@ -659,13 +664,13 @@
    ],
    "id": "d2d87b5903dd656c",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:54:39.868294Z",
-     "start_time": "2025-01-30T16:54:28.340567Z"
+     "end_time": "2025-01-30T16:57:24.719931Z",
+     "start_time": "2025-01-30T16:57:12.433768Z"
     }
    },
    "cell_type": "code",
@@ -722,20 +727,20 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e4a7aef1757440b3814da831c3df76a8"
+       "model_id": "d7afbd5edb644c40993ba53b9cda4b92"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 24
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-30T16:54:43.198735Z",
-     "start_time": "2025-01-30T16:54:41.415696Z"
+     "end_time": "2025-01-30T16:57:26.518921Z",
+     "start_time": "2025-01-30T16:57:24.735402Z"
     }
    },
    "cell_type": "code",
@@ -1282,10 +1287,15 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 18
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-30T16:57:27.566355Z",
+     "start_time": "2025-01-30T16:57:26.534988Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "test_dataset = Dataset.from_pandas(pd.read_csv(test_dataset_path))\n",
@@ -1297,11 +1307,31 @@
     ")"
    ],
    "id": "b010b71dc3d46ed9",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Map:   0%|          | 0/3730 [00:00<?, ? examples/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "688bc692c64b4843b17b6d2aab98acac"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 19
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-30T16:57:27.855548Z",
+     "start_time": "2025-01-30T16:57:27.582925Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "peft_config = LoraConfig(\n",
@@ -1320,10 +1350,15 @@
    ],
    "id": "8fd2c40131e850aa",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 20
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-30T16:57:27.926269Z",
+     "start_time": "2025-01-30T16:57:27.875304Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "training_arguments = TrainingArguments(\n",
@@ -1355,18 +1390,28 @@
    ],
    "id": "f0aee664e91757ee",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 21
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-30T16:57:27.965479Z",
+     "start_time": "2025-01-30T16:57:27.962601Z"
+    }
+   },
    "cell_type": "code",
    "source": "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)",
    "id": "4d10c9f217e3f02f",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 22
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-30T16:57:27.978250Z",
+     "start_time": "2025-01-30T16:57:27.967546Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "trainer = Trainer(\n",
@@ -1379,14 +1424,50 @@
    ],
    "id": "3503b45bfcc974f",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 23
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-01-30T16:57:27.996272Z"
+    }
+   },
    "cell_type": "code",
    "source": "trainer.train()",
    "id": "430323e15ceda5c4",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='260' max='4660' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 260/4660 10:54 < 3:05:56, 0.39 it/s, Epoch 0.56/10]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "execution_count": null
   },
   {
